--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "@supabase/ssr": "^0.5.2",
     "@supabase/supabase-js": "^2.49.1",
     "dotenv": "^16.4.7",
-    "next": "14.1.0",
+    "next": "^14.2.26",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
